force-app/main/default/objects/custom_create96__c/custom_create96__c.object-meta.xml
<CustomObject>
    <label>Custom created object96</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects96</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>