force-app/main/default/objects/custom_create96__c/fields/custom_create_96field606__c.field-meta.xml
<CustomField>
    <fullName>custom_create_96field606__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 96field606</label>
    <type>Checkbox</type>
</CustomField>